<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">揪出卧底</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="game_title">揪出卧底</string>
    <string name="start_game">开始游戏</string>
    <string name="rules">查看规则</string>
    <string name="rules_game_title">游戏规则</string>
    <string name="rules_game_content">游戏规则如下: \n1) 1个卧底, N个平民; \n2) 轮流查看自己的词语, 其中有一个词语和其他不同, 作为卧底; \n3) 轮流用一句话描述自己的词语(不能包含词语); \n4) 轮流投票, 选出卧底, 得票最多的出局; \n5) 卧底死亡, 平民胜利; 最终剩下两个玩家(包含卧底), 卧底胜利; </string>
    <string name="return_main_menu">返回</string>
    <string name="btn_minus"> &lt; </string>
    <string name="btn_plus"> &gt; </string>
    <string name="player_num">游戏人数</string>
    <string name="word_type">词语类别 </string>
    <string name="default_player_num">7</string>
    <string name="default_word_type">不限</string>
    <string name="tip_playerNum_less">游戏人数太少!</string>
    <string name="tip_playerNum_large">游戏人数太多!</string>
    <string name="see_word">查看词语</string>
    <string name="complete">我记住了</string>
    <string name="pass_to">传递给</string>
    <string name="num_player">号玩家</string>
    <string name="please_vote">选出卧底</string>
    <string name="piao">票</string>
    <string name="vote_draw">本轮投票平局!</string>
    <string name="died_pingmin">号玩家含冤而死!</string>
    <string name="win_pingmin">号玩家是卧底\n\n</string>
    <string name="win_wodi">号玩家是卧底\n\n</string>
    <string name="result_msg_title">提示</string>
    <string name="sure">确定</string>
    <string name="result_pingmin_win_title">平民获胜!</string>
    <string name="result_wodi_win_title">卧底获胜!</string>
    <string name="result_draw_title">投票平局!</string>
    <string name="no_person_died">没有选出卧底</string>
    <string name="continue_vote">继续下轮描述</string>
    <string name="play_again">再来一菊</string>
    <string name="wodici">卧底:</string>
    <string name="pingminci">平民:</string>
    <string name="pingmin_died">冤枉啊~</string>
    <string name="clear_vote">重新投票</string>
    <string name="restart">重开一菊</string>
    <string name="cancel">取消</string>
    <string name="attention">提示</string>
    <string name="restart_ask">重开一菊?</string>

</resources>
