<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ConfigGame" >

    <TextView
        android:id="@+id/tv_wordScreen"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:background="@color/ctrlbackground"
        android:gravity="center"
        android:text="@string/player_num"
        android:textColor="@color/textColor"
        android:textSize="30sp" />

    <TableRow
        android:id="@+id/player_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_playerNumPrev"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/btn_minus"
            android:textColor="@color/textColor"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView_playerNum"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/ctrlbackground"
            android:gravity="center"
            android:text="@string/default_player_num"
            android:textColor="@color/textColor"
            android:textSize="30sp" >
        </TextView>

        <Button
            android:id="@+id/btn_playerNumNext"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/btn_plus"
            android:textColor="@color/textColor"
            android:textSize="40sp" />
    </TableRow>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:background="@color/ctrlbackground"
        android:gravity="center"
        android:text="@string/word_type"
        android:textColor="@color/textColor"
        android:textSize="30sp" />

    <TableRow
        android:id="@+id/word_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_typePrev"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/btn_minus"
            android:textColor="@color/textColor"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView_wordType"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/ctrlbackground"
            android:gravity="center"
            android:text="@string/default_word_type"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_typeNext"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/btn_plus"
            android:textColor="@color/textColor"
            android:textSize="40sp" />
    </TableRow>

    <Button
        android:id="@+id/btn_space"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:background="@color/ctrlbackground"
        android:gravity="center"
        android:text=""
        android:textColor="@color/textColor"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_startGameNow"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3"
        android:background="@drawable/selector"
        android:gravity="center"
        android:text="@string/start_game"
        android:textColor="@color/textColor"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_space2"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:background="@color/ctrlbackground"
        android:gravity="center"
        android:text=""
        android:textColor="@color/textColor"
        android:textSize="30sp" />

</TableLayout>