<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/background" >

    <TextView
        android:id="@+id/tv_wordScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:gravity="center"
        android:layout_weight="5"
        android:textSize="50sp"
        android:textColor="@color/textColor"
        android:background="@color/ctrlbackground" />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_weight="1" 
        android:textSize="30sp"
        android:textColor="@color/textColor"
        android:background="@drawable/selector" />
    <Button
        android:id="@+id/btn_space"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.05"
        android:background="@color/background"
        android:gravity="center"
        android:text=""
        android:textColor="@color/textColor"
        android:textSize="30sp" />
    <Button
        android:id="@+id/btn_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:layout_weight="1" 
        android:textSize="30sp"
        android:textColor="@color/textColor"
        android:background="@drawable/selector" />

</LinearLayout>
